--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.6.1",
     "axios": "^1.7.9",
     "expo": "~54.0.22",
+    "expo-contacts": "~15.0.11",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.552.0",
