--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,31 @@
-name: Build and Serve Static HTML
+name: Deploy React App to GitHub Pages
 
 on:
   push:
     branches:
-      - yogiraj
-
-permissions:
-  contents: write
+      - main  # change if your default branch is different
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '20'  # or the version your app uses
 
-      - name: Install
+      - name: Install dependencies
         run: npm install
 
-      - name: Build static HTML
-        run: npx expo export:web
+      - name: Build app
+        run: npm run build
 
-      - name: Deploy static site
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: web-build
+          publish_dir: ./build
