--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~2.1.0",
@@ -27,6 +29,12 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0"
+  },
+  "devDependencies": {
+    "@testing-library/react-native": "^13.3.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.0",
+    "react-test-renderer": "19.1.0"
   },
   "private": true
 }
